RESOLVED FIXED308984
[GStreamer][LibWebRTC] Misc fixes for the video decoder factory
https://bugs.webkit.org/show_bug.cgi?id=308984
Summary [GStreamer][LibWebRTC] Misc fixes for the video decoder factory
Philippe Normand
Reported 2026-03-02 09:00:28 PST
.
Attachments
Philippe Normand
Comment 1 2026-03-02 09:32:39 PST
EWS
Comment 2 2026-03-03 00:32:09 PST
Committed 308528@main (ae71c24d33d0): <https://commits.webkit.org/308528@main> Reviewed commits have been landed. Closing PR #59721 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-03-03 00:33:12 PST
Note You need to log in before you can comment on or make changes to this bug.