[GStreamer][LibWebRTC] Misc fixes for the video decoder factory https://bugs.webkit.org/show_bug.cgi?id=308984

Reviewed by Xabier Rodriguez-Calvar.

This patch restores the reference timestamp meta for storing RTP timestamps in case the pipeline is
doing actual decoding. Also passing by, exit early if the input image has no encoded data buffer and
pull samples from the sink using a timeout, solving potential deadlocks if the pipeline has a decoder.

* Source/WebCore/platform/mediastream/libwebrtc/gstreamer/GStreamerVideoDecoderFactory.cpp:

Canonical link: https://commits.webkit.org/308528@main